--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,93 @@ display: none;
     background: #222222;
 }
 /* --------------------------------------------------------------------------- */
+/* Product list */
+.product-list-wrapper {
+    padding-top: 15px;
+    padding-left: 10%;
+}
+.product-list {
+    display: grid;
+    grid-template-columns: 176px 176px 176px 176px 176px 176px;
+    grid-column-gap: 40px;
+}
+.product-list__item{
+    width: 100%;
+    height: 100%;
+}
+.product-block{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #e0e0e0;
+    position: relative;
+    transition: all .3s ease;
+    box-shadow: 0 0 15px rgba(0,0,0,.1);
+    background: #fff;
+    border-radius: 25px;
+    padding: 10px;
+    font-family: Open Sans,sans-serif;
+}
+.product-block__image{
+    height: 176px;
+    min-height: 176px;
+    position: relative;
+}
+.product-block__description {
+    width: 100%;
+    height: 100%;
+}
+.product-block__title-row {
+    margin: 20px 0 0 10px;
+    font-family: Open Sans,sans-serif;
+    display: flex;
+    align-items: center;
+}
+.product-block__title-text {
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: .05em;
+    text-decoration: none;
+    color: #222;
+}
+.product-block__price-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    margin-top: 10px;
+    width: 100%;
+}
+.product-block__price-block {
+    margin-left: 10px;
+    align-self: center;
+}
+.product-block__price {
+    font-size: 28px;
+    font-weight: 700;
+    display: inline-block;
+}
+
+.product-block__currency {
+    font-size: 18px;
+    margin-left: 3px;
+    font-weight: 700;
+}
+.product-block__btn-wrap {
+    display: inline-block;
+}
+.product-block__cart-button {
+    height: 50px;
+    width: 100%;
+    font-size: 14px;
+    font-weight: 600;
+    transition: all .3s;
+    color: #fff;
+    border: none;
+    border-radius: 15px;
+    background: #e31837;
+}
+/* --------------------------------------------------------------------------- */
 /* Footer */
 footer{
     width: 100%;
@@ -220,7 +307,7 @@ footer{
 
 
 
-@media screen and (max-width: 1280px){
+/* @media screen and (max-width: 1280px){
     .topnav a{
         display: none;
     }
@@ -258,4 +345,4 @@ footer{
         border-right: none;
     }
 
-}
+} */
