--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ nav{
     min-height: 550px;
     position: relative;
     background-color: #DFA8A5;
+    padding-top: 20px;
 }
 /* --------------------------------------------------------------------------- */
 /* Корзина */
